<resources>
    <string name="app_name" translatable="false">UnisaEat</string>
    <string name="login_text">Log in</string>
    <string name="email_hint">Insert email</string>
    <string name="password_hint">Insert password</string>
    <string name="employee_main_title">Employee Dashboard</string>
    <string name="orders_button">Orders</string>
    <string name="settings_btn">Settings</string>
    <string name="scan_btn">Scan QR</string>
    <string name="orders_btn">Manage Orders</string>
    <string name="salad">Salad</string>
    <string name="sandwich">Sandwich</string>
    <string name="basket">Basket</string>
    <string name="no_order_present_text">No orders available</string>
    <string name="date_text">Date</string>
    <string name="products_text">Products</string>
    <string name="exit_btn">Log out</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="info_title_text">User Info</string>
    <string name="cf_text" translatable="false">CF</string>
    <string name="id_text" translatable="false">ID</string>
    <string name="scan_prompt">Scan QR code</string>
    <string name="login">Login</string>
    <string name="both_email_password_error">Please enter both email and password</string>
    <string name="wallet">Wallet</string>
    <string name="welcome">Hi</string>
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_successful">Login successful</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_denied">Order Denied</string>
    <string name="order_success_msg">Order Confirmed at </string>
    <string name="order_error_msg">Order Denied</string>
    <string name="order_time_error_msg">The selected time is not available. Please choose a time between 9 AM and 10 PM that is later than the current time.</string>
    <string name="order_credit_error_msg">You do not have enough credit in your wallet</string>
    <string name="owner_s_name">Owner\'s Name</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="credit_text">"Credit "</string>
    <string name="order_day_error_msg">Cannot order on Saturday and Sunday</string>
    <string name="order_hour_error_msg">Cannot order after 10PM</string>
    <string name="new_transaction_notification_title">New Transaction</string>
    <string name="new_transaction_notification_body">A new transaction has been added to your wallet</string>
    <string name="promo_notification_title">Check out our new promo!</string>
    <string name="promo_notification_message">Open UnisaEat for news</string>
    <string name="error_fetching_menu">Error loading menu day</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="price_list">💰 Cafeteria Price List 💰\n\n
        🍽️ Complete Meal: €4.50\n
        🍕 Pizza Meal: €4.50\n
        🥗 Salad Meal: €2.50\n
        🥘 Reduced Meal A: €3.00\n
        🥣 Reduced Meal B: €2.50\n
        🧺 Basket Meal: €3.00
    </string>
    <string name="add_funds">Add Funds</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="amount_text">Amount</string>
    <string name="recharge_card">Recharge with Card</string>
    <string name="show_qr_code">Show QR Code to the Operator</string>
    <string name="dev_info_btn">About app</string>
    <string name="general_info">General Information</string>
    <string name="email" translatable="false">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="account_info">Account Info</string>
    <string name="status" translatable="false">Status</string>
    <string name="academic_year">A.Y.</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="employee">Employee</string>
    <string name="profile_picture">Profile picture</string>
    <string name="no_transaction_found">No transaction found!</string>
    <string name="transactions_list">Transactions List</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="registration_successful_title">Registration Successful</string>
    <string name="registration_successful_message">You may now log in.</string>
    <string name="registration_failed_title">Registration Failed</string>
    <string name="registration_failed_message">We\'ve encountered a problem during registration. Please try again later.</string>
    <string name="register">Register</string>
    <string name="show">Show Password</string>
    <string name="name_hint">Insert name</string>
    <string name="surname_hint">Insert surname</string>
    <string name="cf_hint">Insert CF</string>
    <string name="phone_hint">Insert phone number</string>
    <string name="empty_name_title">Empty Name Field</string>
    <string name="empty_name_message">Check the name field</string>
    <string name="empty_surname_title">Empty surname field</string>
    <string name="empty_surname_message">Check the surname field</string>
    <string name="empty_cf_title">Empty CF field</string>
    <string name="empty_cf_message">Check the CF field</string>
    <string name="empty_phone_title">Empty phone field</string>
    <string name="empty_phone_message">Check the phone field</string>
    <string name="empty_email_title">Empty email field</string>
    <string name="empty_email_message">Check the email field</string>
    <string name="empty_password_title">Empty password field</string>
    <string name="empty_password_message">Check the password field</string>
    <string name="remember">Remember me</string>
    <string name="order_notification_title">Order remainder</string>
    <string name="order_notification_message">Your order will be available in 10 min</string>
    <string name="low_credit_notification_title">Low Credit</string>
    <string name="low_credit_notification_message">It\'s time to recharge your wallet</string>
    <string name="recharge_paypal">Recharge with PayPal</string>
    <string name="error">Error</string>
    <string name="topup_cash">Topup Cash</string>
    <string name="topup_online">Topup Online</string>
    <string name="payment">Payment</string>
    <string name="reduced_meal_a">Reduced Meal A</string>
    <string name="reduced_meal_b">Reduced Meal B</string>
    <string name="make_payment">Make Payment</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="added_products">Added Products</string>
    <string name="string_complete_meal">Complete Meal</string>
    <string name="unknown">Unknown</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="enable_auto_login">Enable Auto Login</string>
    <string name="insufficient_credit">Insufficient Credit</string>
    <string name="ok" translatable="false">OK</string>
    <string name="owner_name_too_short">Owner\'s name is too short</string>
    <string name="credit_card_number_should_be_16_digits">Credit card number should be 16 digits</string>
    <string name="expiration_date_should_be_5_digits">Expiration date should be in the format MM/YY</string>
    <string name="cvv_should_be_3_digits">CVV should be 3 digits</string>
    <string name="amount_should_be_positive">Amount should be positive</string>
    <string name="gpay_not_implemented">Google Pay integration not implemented</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="payment_invalid">Payment Invalid</string>


</resources>