<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <HorizontalScrollView
        android:id="@+id/day_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fadeScrollbars="true"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/monday_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday_short" />

            <Button
                android:id="@+id/tuesday_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday_short" />

            <Button
                android:id="@+id/wednesday_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday_short" />

            <Button
                android:id="@+id/thursday_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday_short" />

            <Button
                android:id="@+id/friday_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday_short" />
        </LinearLayout>
    </HorizontalScrollView>

    <!-- Immagine centrata -->
    <ImageView

        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/menu"
        android:scaleType="centerCrop"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ProgressBar centrata sopra l'immagine -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Testo sotto l'immagine -->
    <TextView
        style="@style/RoundedCard"
        android:id="@+id/price_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price_list"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
