<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/background_frame"
        style="@style/RoundedCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- LinearLayout containing EditTexts and Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Title Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="20dp"
                android:text="@string/register"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Name EditText -->
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/name_hint"
                android:background="@drawable/rounded_edittext"
                android:inputType="text" />

            <!-- Surname EditText -->
            <EditText
                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/surname_hint"
                android:inputType="text" />

            <!-- CF EditText -->
            <EditText
                android:id="@+id/cf_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/cf_hint"
                android:inputType="text" />

            <!-- Phone EditText -->
            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="email"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp" />


            <!-- DIVISORE -->
            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/divider" />


            <!-- Email EditText -->
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="email"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <!-- Password EditText with Checkbox -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!-- Password EditText -->
                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_toEndOf="@id/show_password_checkbox"
                    android:autofillHints="password"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <!-- Show Password CheckBox -->
                <CheckBox
                    android:id="@+id/show_password_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_edit_text"
                    android:layout_marginEnd="12dp"
                    android:text="@string/show" />

            </RelativeLayout>


            <Button
                android:id="@+id/register_btn"
                style="@style/MainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <ProgressBar
                android:id="@+id/register_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
