<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/today_date_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Date"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"

        >
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title_text"
            android:textStyle="bold"
            ></TextView>

        <TextView
            android:textSize="20sp"
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

        </TextView>
        <TextView
            android:textSize="20sp"
            android:id="@+id/surname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </TextView>

        <TextView
            android:textSize="20sp"
            android:id="@+id/cf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textSize="20sp"
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="50dp">
        </TextView>

        <Button

            style="@style/MainButton"
            android:id="@+id/orders_btn"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/orders_btn"
            android:layout_marginBottom="20dp">
        </Button>

        <Button
            style="@style/MainButton"
            android:id="@+id/scan_btn"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/scan_btn"
            android:layout_marginBottom="20dp">
        </Button>




    </LinearLayout>

        <Button
            style="@style/RedButton"
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_btn"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp">

        </Button>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>