<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content Container -->
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar" />

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottombar_background"
        android:orientation="horizontal"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/divider"
        android:dividerPadding="25dp">

        <!-- Wallet Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/wallet_btn"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_custom"
                android:contentDescription="@string/wallet"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/wallet"
                android:textAlignment="center"
                android:textColor="@color/secondary" />
        </LinearLayout>

        <!-- Preorder Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/order_btn"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_custom"
                android:contentDescription="@string/order"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/ic_preorder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/order"
                android:textAlignment="center"
                android:textColor="@color/secondary" />
        </LinearLayout>

        <!-- Menu Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_custom"
                android:contentDescription="@string/menu"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/ic_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textColor="@color/secondary" />
        </LinearLayout>

        <!-- Settings Icon -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/settings_btn"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_custom"
                android:contentDescription="@string/settings"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/secondary" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
